--- a/default.css
+++ b/default.css
@@ -1,6 +1,6 @@
 body {
 	margin: 0;
-	padding: 0;
+	padding: 0px 0px;
 	background: #0F5B96 url(images/img01.gif) repeat-x;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 13px;
